[gd_scene load_steps=6 format=3 uid="uid://cyqmisfnsxuuy"]

[ext_resource type="Script" path="res://Scenes/UI/MultiPanel.gd" id="1_6d7jw"]
[ext_resource type="Texture2D" uid="uid://b5a6olytlq4l5" path="res://Resources/Tilesets/basictiles.png" id="1_pyjqs"]
[ext_resource type="Texture2D" uid="uid://bs3i47a078ar0" path="res://Resources/GUI/Button_normal.png" id="3_a6pa6"]
[ext_resource type="Texture2D" uid="uid://b2mg5jll3m07p" path="res://Resources/GUI/Button_pressed.png" id="4_f1tl6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_md5uq"]
texture = ExtResource("1_pyjqs")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0
region_rect = Rect2(92, 220, 24, 24)

[node name="MultiPanel" type="Control" groups=["Windows"]]
texture_filter = 1
custom_minimum_size = Vector2(288, 166)
layout_mode = 3
anchor_left = 0.2
anchor_top = 0.3
anchor_right = 0.8
anchor_bottom = 0.869
offset_top = 16.0
offset_bottom = -0.0800171
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6d7jw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_md5uq")

[node name="InventoryBackground" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Inventory" type="VBoxContainer" parent="Panel/InventoryBackground"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -0.004
anchor_top = 0.08
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.66675
offset_top = -0.000881195
offset_right = -0.687988
offset_bottom = -0.0109863
grow_horizontal = 2
grow_vertical = 2

[node name="Inventory" type="HBoxContainer" parent="Panel/InventoryBackground/Inventory"]
layout_mode = 2
size_flags_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/InventoryBackground/Inventory/Inventory"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="Items" type="GridContainer" parent="Panel/InventoryBackground/Inventory/Inventory"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
columns = 5

[node name="MarginContainer2" type="MarginContainer" parent="Panel/InventoryBackground/Inventory/Inventory"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 2

[node name="EquipItems" type="GridContainer" parent="Panel/InventoryBackground/Inventory/Inventory"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="MarginContainer3" type="MarginContainer" parent="Panel/InventoryBackground/Inventory/Inventory"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 2

[node name="ExtraItems" type="GridContainer" parent="Panel/InventoryBackground/Inventory/Inventory"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Skills" type="VBoxContainer" parent="Panel/InventoryBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/InventoryBackground/Skills"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Panel/InventoryBackground/Skills"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel/InventoryBackground/Skills/Buttons"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="ActiveSkillButton" type="TextureButton" parent="Panel/InventoryBackground/Skills/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("3_a6pa6")
texture_pressed = ExtResource("4_f1tl6")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/InventoryBackground/Skills/Buttons/ActiveSkillButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 6
text = "Active Skills"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PasiveSkillButton" type="TextureButton" parent="Panel/InventoryBackground/Skills/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("3_a6pa6")
texture_pressed = ExtResource("4_f1tl6")
ignore_texture_size = true
stretch_mode = 0

[node name="Label2" type="Label" parent="Panel/InventoryBackground/Skills/Buttons/PasiveSkillButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 6
text = "Pasive Skills"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Panel/InventoryBackground/Skills/Buttons"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="Body" type="VBoxContainer" parent="Panel/InventoryBackground/Skills"]
layout_mode = 2

[node name="ActiveSkills" type="VBoxContainer" parent="Panel/InventoryBackground/Skills/Body"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/InventoryBackground/Skills/Body/ActiveSkills"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/InventoryBackground/Skills/Body/ActiveSkills"]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="Panel/InventoryBackground/Skills/Body/ActiveSkills/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="ActiveSkillsContainer" type="GridContainer" parent="Panel/InventoryBackground/Skills/Body/ActiveSkills/HBoxContainer"]
layout_mode = 2
columns = 11

[node name="MarginContainer4" type="MarginContainer" parent="Panel/InventoryBackground/Skills/Body/ActiveSkills/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Panel/InventoryBackground/Skills/Body/ActiveSkills"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="PasiveSkills" type="VBoxContainer" parent="Panel/InventoryBackground/Skills/Body"]
visible = false
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="Panel/InventoryBackground/Skills/Body/PasiveSkills"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/InventoryBackground/Skills/Body/PasiveSkills"]
layout_mode = 2

[node name="MarginContainer5" type="MarginContainer" parent="Panel/InventoryBackground/Skills/Body/PasiveSkills/HBoxContainer2"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="PasiveSkillsContainer" type="GridContainer" parent="Panel/InventoryBackground/Skills/Body/PasiveSkills/HBoxContainer2"]
layout_mode = 2
columns = 11

[node name="MarginContainer6" type="MarginContainer" parent="Panel/InventoryBackground/Skills/Body/PasiveSkills/HBoxContainer2"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="MarginContainer4" type="MarginContainer" parent="Panel/InventoryBackground/Skills/Body/PasiveSkills"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="SkillsPanel" type="TextureButton" parent="."]
custom_minimum_size = Vector2(120, 16)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.425
anchor_top = 0.013
anchor_right = 1.425
anchor_bottom = 0.013
offset_left = -282.4
offset_top = -18.158
offset_right = -152.4
offset_bottom = -2.158
texture_normal = ExtResource("3_a6pa6")
texture_pressed = ExtResource("4_f1tl6")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="SkillsPanel"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 7
text = "skills"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Inventory" type="TextureButton" parent="."]
custom_minimum_size = Vector2(130, 16)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.425
anchor_top = 0.254
anchor_right = 1.425
anchor_bottom = 0.254
offset_left = -410.4
offset_top = -58.164
offset_right = -306.4
offset_bottom = -42.164
texture_normal = ExtResource("3_a6pa6")
texture_pressed = ExtResource("4_f1tl6")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Inventory"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 7
text = "inventory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit" type="TextureButton" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.944
anchor_top = -0.048
anchor_right = 0.944
anchor_bottom = -0.048
offset_left = -15.872
offset_top = -8.032
offset_right = 16.128
offset_bottom = 7.968
texture_normal = ExtResource("3_a6pa6")
texture_pressed = ExtResource("4_f1tl6")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Exit"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 7
text = "X"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Panel/InventoryBackground/Skills/Buttons/ActiveSkillButton" to="." method="_on_active_skill_button_pressed"]
[connection signal="pressed" from="Panel/InventoryBackground/Skills/Buttons/PasiveSkillButton" to="." method="_on_pasive_skill_button_pressed"]
[connection signal="pressed" from="SkillsPanel" to="." method="_on_skills_panel_pressed"]
[connection signal="pressed" from="Inventory" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
